\name{NEWS}
\title{News for Package "recosystem"}

\section{Changes in recosystem version 0.4.4}{
  \itemize{
    \item Fixed the problem that \pkg{recosystem} gives different results on Windows
          compared with other OS, reported by Prof. Michael Trusov.
  }
}

\section{Changes in recosystem version 0.4.3}{
  \itemize{
    \item Updated LIBMF to the newest version (403153c) in the upstream repository.
    \item Fixed a logical operation bug and a virtual destructor bug detected by CRAN.
  }
}

\section{Changes in recosystem version 0.4.2}{
  \itemize{
    \item Added the missing "\code{nbin}" parameter in \code{$train()} and
          \code{$tune()}. (\href{https://github.com/yixuan/recosystem/issues/6}{#6},
          reported by \href{https://github.com/Tutuchan}{@Tutuchan}).
    \item Added a progress bar for model tuning, controlled by the "\code{progress}"
          parameter in \code{$tune()}.
          (\href{https://github.com/yixuan/recosystem/issues/5}{#5},
          suggested by \href{https://github.com/talegari}{@talegari}).
  }
}

\section{Changes in recosystem version 0.4.1}{
  \itemize{
    \item Fixed the misleading column name "rmse" in the return value of
          \code{$tune()}.
    \item Also updated the documentation accordingly.
    \item Fixed the wrong parameter name in \code{.Call()}, thanks to Kurt Hornik.
    \item Now using the \pkg{prettydoc} package to format vignettes.
  }
}

\section{Changes in recosystem version 0.4}{
  \itemize{
    \item Updated LIBMF to version 2.01.
    \item API change from LIBMF 2.01:
          \itemize{
            \item The \code{cost} option in \code{$train()} and \code{$tune()}
                  has been expanded to and replaced by \code{costp_l1},
                  \code{costp_l2}, \code{costq_l1}, and \code{costq_l2}, to
                  allow for more flexibility of the model.
            \item A new \code{loss} parameter in \code{$train()} and