@@ -1,8 +1,8 @@
 Package: recosystem
 Type: Package
 Title: Recommender System using Matrix Factorization
-Version: 0.4.4
-Date: 2021-01-09
+Version: 0.4.5
+Date: 2021-05-14
 Author: Yixuan Qiu, Chih-Jen Lin, Yu-Chin Juan, Wei-Sheng Chin,
     Yong Zhuang, Bo-Wen Yuan, Meng-Yuan Yang, and other
     contributors. See file AUTHORS for details.
@@ -22,11 +22,11 @@ BugReports: https://github.com/yixuan/recosystem/issues
 SystemRequirements: C++11
 Depends: R (>= 3.3.0), methods
 Imports: Rcpp (>= 0.11.0)
-Suggests: knitr, prettydoc
+Suggests: knitr, rmarkdown, prettydoc
 LinkingTo: Rcpp, RcppProgress
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
 NeedsCompilation: yes
-Packaged: 2021-01-09 04:12:50 UTC; qyx
+Packaged: 2021-05-14 12:45:59 UTC; qyx
 Repository: CRAN
-Date/Publication: 2021-01-10 05:10:05 UTC
+Date/Publication: 2021-05-14 14:20:02 UTC
