@@ -1,4 +1,4 @@
-a986bc09e8768b53ecd9f9c3ffd9da00 *DESCRIPTION
+cdd65d3c2169810a96689aa184ef2ef4 *DESCRIPTION
 cc4a0543a8648a70e9cab06b0cd241e8 *LICENSE
 48b28bc8021b054c031400a0495ac4fb *NAMESPACE
 fd45d261937aa156940e51277132d7ba *R/DataSource.R
@@ -9,12 +9,12 @@ e7641d7bf39fe5379e361ebe3d15545a *R/RecoSys.R
 faf536dc346dd8b911958812027058ff *build/vignette.rds
 589dd0ea6be44e5b44d8222ae90d1805 *inst/AUTHORS
 93d41f14379d164378e12a2da46ca87d *inst/COPYRIGHTS
-0a5836e7acb085d75744b8c4c195bddb *inst/NEWS.Rd
+9113b690682cb0ebcc363edc47742874 *inst/NEWS.Rd
 b6c39d661d25cc1f37f95f2280525104 *inst/dat/smalltest.txt
 d9e88b463350a2014e23447e141b6d3f *inst/dat/smalltrain.txt
 a49b0666d5823ea749e6b9f55ae8b389 *inst/doc/introduction.R
 eee59423511341d1de80bb69e2196d18 *inst/doc/introduction.Rmd
-122ebb7a78da6ad2f76dfd0d9becc458 *inst/doc/introduction.html
+1832782668ab024018be412774aedc9d *inst/doc/introduction.html
 e1e442e05d598296326ccd75017fb127 *man/Reco.Rd
 bbeebd65b7088cdd97a70bc63fb46568 *man/data_source.Rd
 54f0128af22888d0aa0ef18d49d0a125 *man/output.Rd
