@@ -12,7 +12,7 @@
 
 <meta name="author" content="Yixuan Qiu" />
 
-<meta name="date" content="2021-01-09" />
+<meta name="date" content="2021-05-14" />
 
 <title>recosystem: Recommender System Using Parallel Matrix Factorization</title>
 
@@ -158,7 +158,7 @@ a.sourceLine {
 <section class="page-header">
 <h1 class="title toc-ignore project-name">recosystem: Recommender System Using Parallel Matrix Factorization</h1>
 <h4 class="author project-author">Yixuan Qiu</h4>
-<h4 class="date project-date">2021-01-09</h4>
+<h4 class="date project-date">2021-05-14</h4>
 </section>
 
 
@@ -406,7 +406,7 @@ a.sourceLine {
 <div class="sourceCode" id="cb8"><pre class="sourceCode r"><code class="sourceCode r"><span id="cb8-1"><a href="#cb8-1"></a><span class="co">## Write predictions to file</span></span>
 <span id="cb8-2"><a href="#cb8-2"></a>pred_file =<span class="st"> </span><span class="kw">tempfile</span>()</span>
 <span id="cb8-3"><a href="#cb8-3"></a>r<span class="op">$</span><span class="kw">predict</span>(test_set, <span class="kw">out_file</span>(pred_file))</span></code></pre></div>
-<pre><code>## prediction output generated at /tmp/Rtmp12XMo1/file4463d467d3c</code></pre>
+<pre><code>## prediction output generated at /tmp/Rtmplz9S3Z/filed8614cd505e</code></pre>
 <div class="sourceCode" id="cb10"><pre class="sourceCode r"><code class="sourceCode r"><span id="cb10-1"><a href="#cb10-1"></a><span class="kw">print</span>(<span class="kw">scan</span>(pred_file, <span class="dt">n =</span> <span class="dv">10</span>))</span></code></pre></div>
 <pre><code>##  [1] 3.76629 2.85805 3.13870 3.22261 2.88342 2.93686 2.71680 2.96046 2.78316
 ## [10] 3.65474</code></pre>
